--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website of the Ukrainian triathlon club \"Tri Kozaky\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /tri-kozaky/"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/IronFather/tri-kozaky/issues"
   },
-  "homepage": "https://github.com/IronFather/tri-kozaky#readme"
+  "homepage": "https://github.com/IronFather/tri-kozaky#readme",
+  "dependencies": {
+    "parcel": "^2.8.0"
+  }
 }
